@@ -1,9 +1,0 @@
-#!/bin/bash
-
-set -e
-
-ELIBS="${EPIPHANY_HOME}/tools/host/lib"
-EHDF="${EPIPHANY_HOME}/bsps/current/platform.hdf"
-
-sudo -E LD_LIBRARY_PATH=${ELIBS} EPIPHANY_HDF=${EHDF} ${EPIPHANY_HOME}/tools/host/bin/e-loader.e $@
-
